--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>My First Webpage</h1>
-    <p></p>
-    <img src="" alt="">
-    <ul><li></li></ul>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+		<title>My Webpage</title>
+        </head>
+		<h1>My Webpage</h1>
+        <hr>
+		<p>
+			My name is Mutiat Bashua, a frontend developer from Lagos, Nigeria.
+			Asides from coding, i'm also a fashion designer that makes beautiful
+			outfits.
+		</p>
+		<img src="Myself.jpeg" alt="a picture of myself" />
+        <hr>
+		<ul>
+			<li>My Favourite Movie is titled Scarlet Heart</li>
+			<li>My Hobbies include reading, illustrating and coding</li>
+			<li>The places i'll like to visit are Paris, New York and South Africa</li>
+		</ul>
+        <a href="https://github.com/MutiatBash">My Github Profile</a>
+	</body>
 </html>
