--- a/Assignments/Assignment-3/pages/about.html
+++ b/Assignments/Assignment-3/pages/about.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../styles/about.css" />
+		<title>Culinary Masters - About Us</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="logo">
+				<h4>Culinary Masters</h4>
+			</div>
+			<nav class="main-nav">
+				<ul>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="../pages/about.html" class="active">About Us</a></li>
+					<li><a href="../pages/recipes/recipes.html">Recipes</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<section id="about-us" class="about-us-section">
+			<h2 class="section-title">About Us</h2>
+			<p>
+				At Culinary Masters, we believe that cooking is an art that brings
+				people together. Our team of passionate foodies is dedicated to
+				sharing culinary inspiration and making the kitchen a place of
+				creativity and joy. Join us on this flavorful journey as we explore
+				the world of gastronomy one recipe at a time.
+			</p>
+		</section>
+
+		<footer class="site-footer">
+			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
+		</footer>
+	</body>
 </html>
