--- a/Assignments/Assignment-3/pages/recipes/recipes.html
+++ b/Assignments/Assignment-3/pages/recipes/recipes.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../styles/recipes.css" />
+		<title>Culinary Masters - Recipes</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="logo">
+				<h4>Culinary Masters</h4>
+			</div>
+			<nav class="main-nav">
+				<ul>
+					<li><a href="../../index.html">Home</a></li>
+					<li><a href="../about.html">About Us</a></li>
+					<li><a href="../recipes/recipes.html" class="active">Recipes</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<section id="recipe-categories" class="recipe-categories-section">
+			<h2 class="section-title">Recipe Categories</h2>
+			<!-- Include links to different recipe categories -->
+			<ul>
+				<li><a href="#dinner-delights">Dinner Delights</a></li>
+				<li><a href="#sweet-treats">Sweet Treats</a></li>
+				<li><a href="#healthy-eats">Healthy Eats</a></li>
+				<li><a href="#global-flavors">Global Flavors</a></li>
+			</ul>
+		</section>
+
+		<section id="recipe-list" class="recipe-list-section">
+			<h2 class="section-title">Explore Our Recipes</h2>
+			<!-- Include links and images for various recipes -->
+		</section>
+
+		<footer class="site-footer">
+			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
+		</footer>
+	</body>
 </html>
