--- a/Assignments/Assignment-3/index.html
+++ b/Assignments/Assignment-3/index.html
@@ -65,7 +65,7 @@
 			</div>
 		</section>
 
-		<section id="contact" class="contact-section">
+		<!-- <section id="contact" class="contact-section">
 			<h2 class="section-title">Contact Us</h2>
 			<p>
 				Have questions about a recipe or want to share your cooking
@@ -74,7 +74,7 @@
 					>info@culinarymasters.com</a
 				>.
 			</p>
-		</section>
+		</section> -->
 
 		<footer class="footer">
 			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
