--- a/Assignments/Assignment-3/pages/about.html
+++ b/Assignments/Assignment-3/pages/about.html
@@ -7,32 +7,76 @@
 		<title>Culinary Masters - About Us</title>
 	</head>
 	<body>
-		<header class="header">
-			<div class="logo">
-				<h4>Culinary Masters</h4>
-			</div>
-			<nav class="main-nav">
-				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../pages/about.html" class="active">About Us</a></li>
-					<li><a href="../pages/recipes/recipes.html">Recipes</a></li>
-				</ul>
-			</nav>
-		</header>
+		<div class="about-sect">
+			<header class="header">
+				<div class="logo">
+					<h4>Culinary Masters</h4>
+				</div>
+				<nav class="main-nav">
+					<ul>
+						<li><a href="../index.html">Home</a></li>
+						<li>
+							<a href="../pages/about.html" class="active">About Us</a>
+						</li>
+						<li><a href="../pages/recipes/recipes.html">Recipes</a></li>
+					</ul>
+				</nav>
+			</header>
 
-		<section id="about-us" class="about-us-section">
-			<h2 class="section-title">About Us</h2>
-			<p>
-				At Culinary Masters, we believe that cooking is an art that brings
-				people together. Our team of passionate foodies is dedicated to
-				sharing culinary inspiration and making the kitchen a place of
-				creativity and joy. Join us on this flavorful journey as we explore
-				the world of gastronomy one recipe at a time.
-			</p>
-		</section>
+			<section id="about-us" class="about-us-section">
+				<h2 class="section-title">About Us</h2>
+				<p>
+					At Culinary Masters, we believe that cooking is an art that
+					brings people together. Our team of passionate foodies is
+					dedicated to sharing culinary inspiration and making the kitchen
+					a place of creativity and joy. Join us on this flavorful journey
+					as we explore the world of gastronomy one recipe at a time.
+				</p>
+			</section>
+			<section id="our-chefs" class="our-chefs-section">
+				<h2 class="section-title">Our Chefs</h2>
+				<div class="chef-sect">
+					<div class="chef-profile">
+						<img src="chef1.jpg" alt="Chef 1" />
+						<h4>Chef John Doe</h4>
+						<p class="role">Head Chef</p>
+						<p>
+							With over 15 years of culinary experience, Chef John Doe
+							brings a passion for creating delightful and innovative
+							dishes to Culinary Masters. As the Head Chef, he leads our
+							kitchen with creativity and precision.
+						</p>
+					</div>
 
-		<footer class="site-footer">
-			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
-		</footer>
+					<div class="chef-profile">
+						<img src="chef2.jpg" alt="Chef 2" />
+						<h4>Chef Jane Smith</h4>
+						<p class="role">Pastry Chef</p>
+						<p>
+							Meet Chef Jane Smith, our talented Pastry Chef. With a
+							background in pastry arts and a love for sweet creations,
+							she adds a touch of sweetness to our culinary offerings.
+							Indulge in her delectable desserts!
+						</p>
+					</div>
+
+					<div class="chef-profile">
+						<img src="chef3.jpg" alt="Chef 3" />
+						<h4>Chef Michael Johnson</h4>
+						<p class="role">Sous Chef</p>
+						<p>
+							Chef Michael Johnson, our Sous Chef, brings a wealth of
+							experience in creating savory dishes. His dedication to
+							perfecting flavors and ensuring a seamless kitchen
+							operation contributes to the success of Culinary Masters.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<footer class="site-footer">
+				<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
+			</footer>
+		</div>
 	</body>
 </html>
