about us section completed

--- a/Assignments/Assignment-3/pages/about.html
+++ b/Assignments/Assignment-3/pages/about.html
@@ -22,59 +22,72 @@
 					</ul>
 				</nav>
 			</header>
+            <div class="btn-nav"><button class="button"><a href="../index.html">Back to Home</a></button></div>
 
 			<section id="about-us" class="about-us-section">
-				<h2 class="section-title">About Us</h2>
-				<p>
-					At Culinary Masters, we believe that cooking is an art that
-					brings people together. Our team of passionate foodies is
-					dedicated to sharing culinary inspiration and making the kitchen
-					a place of creativity and joy. Join us on this flavorful journey
-					as we explore the world of gastronomy one recipe at a time.
-				</p>
+				<div class="about-text">
+					<h2 class="section-title">About Us</h2>
+					<p>
+						At Culinary Masters, we believe that cooking is an art that
+						brings people together. Our team of passionate foodies is
+						dedicated to sharing culinary inspiration and making the
+						kitchen a place of creativity and joy. Join us on this
+						flavorful journey as we explore the world of gastronomy one
+						recipe at a time.
+					</p>
+				</div>
+
+				<div class="about-img"><img src="../images/chefs.jpg" alt="Chefs" /></div>
 			</section>
 			<section id="our-chefs" class="our-chefs-section">
 				<h2 class="section-title">Our Chefs</h2>
 				<div class="chef-sect">
 					<div class="chef-profile">
-						<img src="chef1.jpg" alt="Chef 1" />
-						<h4>Chef John Doe</h4>
-						<p class="role">Head Chef</p>
-						<p>
-							With over 15 years of culinary experience, Chef John Doe
-							brings a passion for creating delightful and innovative
-							dishes to Culinary Masters. As the Head Chef, he leads our
-							kitchen with creativity and precision.
-						</p>
+						<div><img src="../images/chef1.jpg" alt="Chef 1" /></div>
+						<div class="profile-text">
+							<h4>Chef Mary Doe</h4>
+							<p class="role">Head Chef</p>
+							<p>
+								With over 15 years of culinary experience, Chef Mary
+								brings a passion for creating delightful and innovative
+								dishes to Culinary Masters. As the Head Chef, she leads
+								our kitchen with creativity and precision.
+							</p>
+						</div>
 					</div>
 
 					<div class="chef-profile">
-						<img src="chef2.jpg" alt="Chef 2" />
-						<h4>Chef Jane Smith</h4>
-						<p class="role">Pastry Chef</p>
-						<p>
-							Meet Chef Jane Smith, our talented Pastry Chef. With a
-							background in pastry arts and a love for sweet creations,
-							she adds a touch of sweetness to our culinary offerings.
-							Indulge in her delectable desserts!
-						</p>
+						<div><img src="../images/chef3.jpg" alt="Chef 3" /></div>
+						<div class="profile-text">
+							<h4>Chef Jane Smith</h4>
+							<p class="role">Pastry Chef</p>
+							<p>
+								Meet Chef Jane, our talented Pastry Chef. With a
+								background in pastry arts and a love for sweet
+								creations, she adds a touch of sweetness to our culinary
+								offerings. Indulge in her delectable desserts!
+							</p>
+						</div>
 					</div>
 
 					<div class="chef-profile">
-						<img src="chef3.jpg" alt="Chef 3" />
-						<h4>Chef Michael Johnson</h4>
-						<p class="role">Sous Chef</p>
-						<p>
-							Chef Michael Johnson, our Sous Chef, brings a wealth of
-							experience in creating savory dishes. His dedication to
-							perfecting flavors and ensuring a seamless kitchen
-							operation contributes to the success of Culinary Masters.
-						</p>
+						<div><img src="../images/chef2.jpg" alt="Chef 2" /></div>
+						<div class="profile-text">
+							<h4>Chef Michael Johnson</h4>
+							<p class="role">Sous Chef</p>
+							<p>
+								Chef Michael, our Sous Chef, brings a wealth of
+								experience in creating savory dishes. His dedication to
+								perfecting flavors and ensuring a seamless kitchen
+								operation contributes to the success of Culinary
+								Masters.
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
 
-			<footer class="site-footer">
+			<footer class="footer">
 				<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
 			</footer>
 		</div>
