--- a/Assignments/Assignment-3/index.html
+++ b/Assignments/Assignment-3/index.html
@@ -50,31 +50,33 @@
 		<section id="featured-recipe" class="featured-recipe-section">
 			<h2 class="section-title">Featured Recipe</h2>
 			<div class="recipe-deet">
-				<div class="hero-img">
+				<div class="recipe-img">
 					<img
 						src="../Assignment-3/images/featured-recipe.jpg"
 						alt="Delicious Food"
 						class="hero-image"
 					/>
 				</div>
-				<div>
-					<h3>Chicken Balls</h3>
-					<p></p>
-					<button>View Recipe</button>
+				<div class="recipe-text">
+					<h3>Meaty Veggie</h3>
+					<p>
+						Meaty Veggie is a delightful and savory dish that combines the
+						juiciness of tender meatballs with the rich flavors of a
+						hearty meat sauce. This classic comfort food is a favorite in
+						many households, offering a perfect blend of textures and
+						tastes that satisfy the palate.
+					</p>
+					<p>
+						These veggie patties can be served in a variety of
+						ways—nestled in a whole-grain bun as a burger, atop a crisp
+						salad, or alongside your favorite side dishes. Topping options
+						like avocado slices, fresh greens, or a tangy yogurt sauce
+						enhance the overall dining experience.
+					</p>
+					<button class="button"><a>View Recipe</a></button>
 				</div>
 			</div>
 		</section>
-
-		<!-- <section id="contact" class="contact-section">
-			<h2 class="section-title">Contact Us</h2>
-			<p>
-				Have questions about a recipe or want to share your cooking
-				experiences? Contact our friendly team at
-				<a href="mailto:info@culinarymasters.com"
-					>info@culinarymasters.com</a
-				>.
-			</p>
-		</section> -->
 
 		<footer class="footer">
 			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
