--- a/Assignments/Assignment-3/pages/recipes/recipes.html
+++ b/Assignments/Assignment-3/pages/recipes/recipes.html
@@ -11,32 +11,84 @@
 			<div class="logo">
 				<h4>Culinary Masters</h4>
 			</div>
-			<nav class="main-nav">
+			<nav class="nav">
 				<ul>
 					<li><a href="../../index.html">Home</a></li>
 					<li><a href="../about.html">About Us</a></li>
-					<li><a href="../recipes/recipes.html" class="active">Recipes</a></li>
+					<li>
+						<a href="../recipes/recipes.html" class="active">Recipes</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
 
-		<section id="recipe-categories" class="recipe-categories-section">
-			<h2 class="section-title">Recipe Categories</h2>
-			<!-- Include links to different recipe categories -->
-			<ul>
-				<li><a href="#dinner-delights">Dinner Delights</a></li>
-				<li><a href="#sweet-treats">Sweet Treats</a></li>
-				<li><a href="#healthy-eats">Healthy Eats</a></li>
-				<li><a href="#global-flavors">Global Flavors</a></li>
-			</ul>
+		<section class="recipe-section">
+			<h2 class="section-title">Discover Culinary Delights</h2>
+			<p>
+				Explore our collection of delectable recipes crafted with passion
+				and creativity. From savory dinner delights to sweet treats and
+				healthy eats, our recipes are designed to tantalize your taste buds
+				and inspire your culinary journey.
+			</p>
 		</section>
 
 		<section id="recipe-list" class="recipe-list-section">
 			<h2 class="section-title">Explore Our Recipes</h2>
-			<!-- Include links and images for various recipes -->
+			<div class="recipes">
+				<!-- Recipe 1 -->
+				<article class="recipe">
+					<div class="recipes-img">
+						<img src="../../images/spaghetti1.jpg" alt="Recipe 1 Image" />
+					</div>
+
+					<h3>Delicious Pasta Delight</h3>
+					<p>
+						Indulge in this mouth-watering pasta dish that combines the
+						richness of tomato sauce with perfectly cooked pasta. A
+						perfect choice for pasta lovers!
+					</p>
+					<button class="button">
+						<a href="../recipes/recipe1.html">Read More</a>
+					</button>
+				</article>
+
+				<!-- Recipe 2 -->
+				<article class="recipe">
+					<div class="recipes-img">
+						<img src="../../images/pizza1.jpg" alt="Recipe 2 Image" />
+					</div>
+
+					<h3>Sweet Pizzaretta</h3>
+					<p>
+						Satisfy your sweet tooth with these decadent chocolate
+						brownies. Each bite is a heavenly experience, perfect for
+						dessert enthusiasts.
+					</p>
+					<button class="button">
+						<a href="../recipes/recipe2.html">Read More</a>
+					</button>
+				</article>
+
+				<!-- Recipe 3 -->
+				<article class="recipe">
+				<div class="recipes-img">
+						<img src="../../images/sharwarma.jpg" alt="Recipe 3 Image" />
+					</div>
+
+					<h3>Healthy Quinoa Salad</h3>
+					<p>
+						Refresh your palate with this nutritious quinoa salad, packed
+						with vibrant vegetables and a zesty dressing. A delightful
+						choice for a wholesome meal.
+					</p>
+					<button class="button">
+						<a href="../recipes/recipe3.html">Read More</a>
+					</button>
+				</article>
+			</div>
 		</section>
 
-		<footer class="site-footer">
+		<footer class="footer">
 			<p>&copy; 2023 Culinary Masters. All rights reserved.</p>
 		</footer>
 	</body>
